# docker-status

./: .dockerignore  Dockerfile  README.md  config.example.json  docker-compose.yaml  pyproject.toml  requirements.txt
docker_status/: __init__.py  __main__.py  my_docker.py  views.py
docker_status/templates/: index.html
