[tool.poetry]
name = "docker-status"
version = "0.1.0"
description = ""
authors = ["Marco Andronaco <andronacomarco@gmail.com>"]
readme = "README.md"
packages = [{include = "docker_status"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
requests = "^2.31.0"
waitress = "^2.1.2"
docker = "^6.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
