[tool.poetry]
name = "docker-status"
version = "0.1.0"
description = "A simple status page for my Docker containers."
authors = ["Marco Andronaco <andronacomarco@gmail.com>"]
readme = "README.md"
packages = [{include = "docker_status"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
requests = "^2.31.0"
docker = "^6.1.3"

[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
waitress = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
